apps/prod/ghost/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost-ingress
  namespace: ghost
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`${GHOST_DOMAIN}`)
    kind: Rule
    services:
    - name: ghost
      port: 80
